--- a/AppXamarin/XamarinApp/XamarinApp/XamarinApp.csproj
+++ b/AppXamarin/XamarinApp/XamarinApp/XamarinApp.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Pages\UserInformationPage.xaml.cs">
       <DependentUpon>UserInformationPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\UserService.cs" />
     <Compile Include="ViewModels\Citas.cs" />
     <Compile Include="Pages\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
