--- a/AppXamarin/XamarinApp/XamarinApp.iOS/Info.plist
+++ b/AppXamarin/XamarinApp/XamarinApp.iOS/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
+		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -18,7 +19,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>9.3</string>
+	<string>9.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>XamarinApp</string>
 	<key>CFBundleIdentifier</key>
